<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="mediateka_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделится приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="button_share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="subject_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_address">dogma5545@yandex.ru</string>
    <string name="terms_of_use">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time">00:00</string>
</resources>