<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_52dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonBack"
            android:layout_width="@dimen/size_52dp"
            android:layout_height="@dimen/size_48dp"
            android:layout_marginStart="@dimen/size_4dp"
            android:backgroundTint="@color/white"
            android:padding="@dimen/size_12dp"
            app:icon="@drawable/icon_back"
            app:iconTint="@color/text_and_icon_color"
            style="?android:attr/borderlessButtonStyle"
            >

        </Button>

        <TextView
            android:layout_width="@dimen/title_size"
            android:layout_height="match_parent"
            android:fontFamily="@font/yandex_sans_medium"
            android:paddingStart="@dimen/size_4dp"
            android:paddingTop="@dimen/size_12dp"
            android:text="@string/settings_button"
            android:textAllCaps="false"
            android:textColor="@color/text_and_icon_color"
            android:textSize="@dimen/text_size"
            tools:ignore="RtlSymmetry">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/left_padding"
        android:paddingEnd="@dimen/right_padding"
        android:paddingTop="@dimen/up_padding"
        android:paddingBottom="@dimen/bottom_padding">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:minHeight="@dimen/height"
            android:text="@string/dark_theme"
            android:fontFamily="@font/ys_regular"
            android:textColor="@color/text_and_icon_color"
            android:textSize="@dimen/text_size_16"
            tools:ignore="UseSwitchCompatOrMaterialXml">
        </Switch>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height"
            android:text="@string/share"
            android:fontFamily="@font/ys_regular"
            android:textSize="@dimen/text_size_16"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:textColor="@color/text_and_icon_color"
            app:drawableEndCompat="@drawable/icon_share">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height"
            android:text="@string/support"
            android:fontFamily="@font/ys_regular"
            android:textSize="@dimen/text_size_16"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:textColor="@color/text_and_icon_color"
            app:drawableEndCompat="@drawable/icon_support">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height"
            android:text="@string/terms"
            android:fontFamily="@font/ys_regular"
            android:textSize="@dimen/text_size_16"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:textColor="@color/text_and_icon_color"
            app:drawableEndCompat="@drawable/icon_terms_of_use">

        </TextView>


    </LinearLayout>

</LinearLayout>